--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+
+  height: 100dvh;
+  width: 100vw;
 }
