--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,6 @@
 .header-container {
-  height: 8rem;
-  width: 65vw;
+  height: 12vh;
+  width: 55vw;
 
   border-radius: 1rem;
   border: 3px solid hsl(217, 16%, 45%);
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem;
+  padding: 3vh;
 }
 
 .header-text-container {
@@ -28,13 +28,16 @@
 
 .score-container {
   background-color: white;
-  height: 8rem;
-  width: 10rem;
+  /* height: 11vh;
+  width: 8vw; */
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 1vh;
+  padding-left: 5vh;
+  padding-right: 5vh;
 }
 
 .score-text {
