--- a/src/Components/Maingame/Main.css
+++ b/src/Components/Maingame/Main.css
@@ -1,10 +1,29 @@
 .main-container {
-  height: 70vh;
-  width: 65vw;
-  /* background-color: red; */
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  /* gap: 15%; */
 
+  position: relative;
+  height: 70vh;
+  width: 55vw;
+  /* background-color: aliceblue; */
+}
+
+.tile-holder {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
+  /* background-color: aliceblue; */
+
+  position: absolute;
+  inset: 0;
+}
+
+.pick-text {
+  margin: 0;
+  color: white;
+  transition: 400ms ease;
+  position: absolute;
 }
