--- a/src/Components/TIle/Tile.css
+++ b/src/Components/TIle/Tile.css
@@ -7,7 +7,16 @@
   justify-content: center;
   box-shadow: inset 0rem -0.4rem hsla(240, 2%, 9%, 0.3);
   position: absolute;
+
+  cursor: pointer;
+
+  transition: transform 400ms ease, visibility 0ms linear;
+  transform-origin: 0px 0px 0px;
   transform: translate(-50%, -50%);
+}
+
+.tile-container:hover {
+  transform: translate(-60%, -60%) scale(1.2);
 }
 
 .tile-inner-container {
@@ -18,8 +27,8 @@
   align-items: center;
   justify-content: center;
 
-  height: 7.5rem;
-  width: 7.5rem;
+  height: 75%;
+  width: 75%;
 
   box-shadow: inset 0rem 0.4rem hsla(240, 2%, 9%, 0.2);
 }
