--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  user-select: none;
 }
 
 body {
@@ -25,4 +27,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  overflow: hidden;
 }
